upgrade to symfony 4 and php 7 (#1,#2)

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -5,6 +5,9 @@ parameters:
 
 services:
   Psr\Log\LoggerInterface: '@logger'
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+
+  custom_doctrine_orm_naming_strategy_underscore:
+      class: Doctrine\ORM\Mapping\UnderscoreNamingStrategy
+      arguments:
+        - 0
+        - true
