--- a/composer.json
+++ b/composer.json
@@ -17,18 +17,20 @@
         }
     },
     "require": {
-        "php": ">=7.1.3",
-        "symfony/symfony": "4.1.*",
+        "php": ">=7.2.34",
+        "symfony/symfony": "4.2.*",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
         "symfony/monolog-bundle": "^3.1",
         "symfony/polyfill-apcu": "^1.0",
-        "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0"
+        "sensio/framework-extra-bundle": "^5.2.2",
+        "incenteev/composer-parameter-handler": "^2.0",
+        "monolog/monolog": "^1.27"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^3.0"
+        "symfony/phpunit-bridge": "^3.0",
+        "rector/rector": "^0.18.11"
     },
     "scripts": {
         "symfony-scripts": [
