--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,6 +1,6 @@
 security:
     encoders:
-        AppBundle\Entity\User: bcrypt
+        AppBundle\Entity\User: auto
 
     providers:
         doctrine:
