--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -34,7 +34,7 @@ twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
     form_themes: ['bootstrap_3_layout.html.twig']
-
+    exception_controller: null
 # Doctrine Configuration
 doctrine:
     dbal:
