--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
     },
     "require": {
         "php": ">=7.2.34",
-        "symfony/symfony": "4.3.*",
+        "symfony/symfony": "4.4.*",
         "doctrine/orm": "^2.5",
-        "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/doctrine-bundle": "^2.0",
         "doctrine/doctrine-cache-bundle": "^1.2",
         "symfony/monolog-bundle": "^3.1",
         "symfony/polyfill-apcu": "^1.0",
@@ -57,6 +57,11 @@
         "symfony-assets-install": "relative",
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "symfony/flex": true
         }
     }
 }
