--- a/composer.json
+++ b/composer.json
@@ -4,59 +4,67 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "": "src/"
-        },
-        "classmap": [
-            "app/AppKernel.php",
-            "app/AppCache.php"
-        ]
+            "App\\": "src/"
+        }
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "App\\Tests\\": "tests/"
         }
     },
     "require": {
         "php": ">=7.2.34",
-        "symfony/symfony": "4.4.*",
-        "doctrine/orm": "^2.5",
+        "doctrine/orm": "^2.8",
         "doctrine/doctrine-bundle": "^2.0",
         "doctrine/doctrine-cache-bundle": "^1.2",
         "symfony/monolog-bundle": "^3.1",
         "symfony/polyfill-apcu": "^1.0",
-        "sensio/framework-extra-bundle": "^5.2.2",
+        "sensio/framework-extra-bundle": "^6.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "monolog/monolog": "^1.27"
+        "monolog/monolog": "^1.27",
+        "symfony/flex": "^1.21",
+        "symfony/security-bundle": "^4.4",
+        "symfony/asset": "^4.4",
+        "symfony/form": "^4.4",
+        "symfony/validator": "^4.4",
+        "symfony/http-foundation": "^4.4",
+        "symfony/config": "^4.4",
+        "symfony/property-access": "^4.4"
     },
+    "conflict" : {
+    "symfony/symfony" : "*"
+},
     "require-dev": {
         "symfony/phpunit-bridge": "^3.0",
-        "rector/rector": "^0.18.11"
+        "rector/rector": "^0.18.11",
+        "symfony/dotenv": "^4.4",
+        "symfony/stopwatch": "^4.4",
+        "symfony/web-profiler-bundle": "^4.4"
     },
     "scripts": {
         "symfony-scripts": [
-            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
+
         ],
         "post-install-cmd": [
             "@symfony-scripts"
         ],
         "post-update-cmd": [
             "@symfony-scripts"
-        ]
+        ],
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+        }
     },
     "extra": {
-        "symfony-app-dir": "app",
-        "symfony-bin-dir": "bin",
-        "symfony-var-dir": "var",
-        "symfony-web-dir": "web",
-        "symfony-tests-dir": "tests",
+        "config-dir": "config/",
+        "bin-dir": "bin/",
+        "var-dir": "var/",
+        "public-dir": "public/",
+        "tests-dir": "tests/",
         "symfony-assets-install": "relative",
         "incenteev-parameters": {
-            "file": "app/config/parameters.yml"
+            "file": "app/config/parameters.yaml"
         }
     },
     "config": {
