--- a/composer.json
+++ b/composer.json
@@ -13,23 +13,25 @@
         }
     },
     "require": {
-        "php": ">=7.2.34",
+        "php": ">=7.4.33",
         "doctrine/orm": "^2.8",
-        "doctrine/doctrine-bundle": "^2.0",
-        "doctrine/doctrine-cache-bundle": "^1.2",
         "symfony/monolog-bundle": "^3.1",
         "symfony/polyfill-apcu": "^1.0",
         "sensio/framework-extra-bundle": "^6.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "monolog/monolog": "^1.27",
         "symfony/flex": "^1.21",
-        "symfony/security-bundle": "^4.4",
-        "symfony/asset": "^4.4",
-        "symfony/form": "^4.4",
-        "symfony/validator": "^4.4",
-        "symfony/http-foundation": "^4.4",
-        "symfony/config": "^4.4",
-        "symfony/property-access": "^4.4"
+        "symfony/security-bundle": "5.0.*",
+        "symfony/asset": "5.0.*",
+        "symfony/form": "5.0.*",
+        "symfony/validator": "5.0.*",
+        "symfony/http-foundation": "5.0.*",
+        "symfony/config": "5.0.*",
+        "symfony/property-access": "5.0.*",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/doctrine-bundle": "^2.3",
+        "doctrine/common": "^3.4",
+        "doctrine/annotations": "^1.11"
     },
     "conflict" : {
     "symfony/symfony" : "*"
@@ -37,9 +39,9 @@
     "require-dev": {
         "symfony/phpunit-bridge": "^3.0",
         "rector/rector": "^0.18.11",
-        "symfony/dotenv": "^4.4",
-        "symfony/stopwatch": "^4.4",
-        "symfony/web-profiler-bundle": "^4.4"
+        "symfony/dotenv": "5.0.*",
+        "symfony/stopwatch": "5.0.*",
+        "symfony/web-profiler-bundle": "5.0.*"
     },
     "scripts": {
         "symfony-scripts": [
@@ -57,6 +59,9 @@
         }
     },
     "extra": {
+        "symfony" : {
+            "require" : "5.0.*"
+        },
         "config-dir": "config/",
         "bin-dir": "bin/",
         "var-dir": "var/",
