--- a/composer.json
+++ b/composer.json
@@ -21,17 +21,18 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "monolog/monolog": "^1.27",
         "symfony/flex": "^1.21",
-        "symfony/security-bundle": "5.2.*",
-        "symfony/asset": "5.2.*",
-        "symfony/form": "5.2.*",
-        "symfony/validator": "5.2.*",
-        "symfony/http-foundation": "5.2.*",
-        "symfony/config": "5.2.*",
-        "symfony/property-access": "5.2.*",
+        "symfony/security-bundle": "5.3.*",
+        "symfony/asset": "5.3.*",
+        "symfony/form": "5.3.*",
+        "symfony/validator": "5.3.*",
+        "symfony/http-foundation": "5.3.*",
+        "symfony/config": "5.3.*",
+        "symfony/property-access": "5.3.*",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/doctrine-bundle": "^2.3",
         "doctrine/common": "^3.4",
-        "doctrine/annotations": "^1.11"
+        "doctrine/annotations": "^1.11",
+        "symfony/password-hasher": "5.3.*"
     },
     "conflict" : {
     "symfony/symfony" : "*"
@@ -39,9 +40,9 @@
     "require-dev": {
         "symfony/phpunit-bridge": "^3.0",
         "rector/rector": "^0.18.11",
-        "symfony/dotenv": "5.2.*",
-        "symfony/stopwatch": "5.2.*",
-        "symfony/web-profiler-bundle": "5.2.*"
+        "symfony/dotenv": "5.3.*",
+        "symfony/stopwatch": "5.3.*",
+        "symfony/web-profiler-bundle": "5.3.*"
     },
     "scripts": {
         "symfony-scripts": [
@@ -60,7 +61,7 @@
     },
     "extra": {
         "symfony" : {
-            "require" : "5.2.*"
+            "require" : "5.3.*"
         },
         "config-dir": "config/",
         "bin-dir": "bin/",
