--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,9 @@
 security:
-    encoders:
+    enable_authenticator_manager: true
+
+    password_hashers:
         App\Entity\User:
-            algorithm: bcrypt
+            algorithm: 'auto'
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         app_user_provider:
@@ -13,7 +15,6 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: true
             provider: app_user_provider
             form_login:
                 login_path: login
