--- a/.env
+++ b/.env
@@ -26,6 +26,6 @@ APP_SECRET=61e604a8d896856c080d59b59e6adabe
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://root:@127.0.0.1:3306/todolist?serverVersion=8&charset=utf8mb4"
+ DATABASE_URL="mysql://root:@127.0.0.1:3306/todolist?serverVersion=10.4.10-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
