--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -2,8 +2,10 @@
 framework:
     secret: '%env(APP_SECRET)%'
     http_method_override: true
+    handle_all_throwables : true
+    annotations:
+        enabled: false
     #csrf_protection: true
-    #http_method_override: true
 
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
