--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "symfony/monolog-bundle": "^3.1",
         "symfony/polyfill-apcu": "^1.0",
         "incenteev/composer-parameter-handler": "^2.0",
-        "monolog/monolog": "^1.27",
+        "monolog/monolog": "^2.0",
         "symfony/flex": "^1.21",
         "symfony/security-bundle": "6.4.*",
         "symfony/asset": "6.4.*",
@@ -41,9 +41,12 @@
         "rector/rector": "^0.18.11",
         "symfony/dotenv": "6.4.*",
         "symfony/stopwatch": "6.4.*",
-        "symfony/web-profiler-bundle": "6.4.*"
+        "symfony/web-profiler-bundle": "6.4.*",
+        "symfony/maker-bundle": "^1.52",
+        "phpro/grumphp": "^2.3"
     },
     "scripts": {
+        "analyse" : "vendor/bin/phpstan analyse src",
         "symfony-scripts": [
 
         ],
@@ -74,7 +77,8 @@
     },
     "config": {
         "allow-plugins": {
-            "symfony/flex": true
+            "symfony/flex": true,
+            "phpro/grumphp": true
         }
     }
 }
