--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,6 +14,7 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            access_denied_handler: App\Security\AccessDeniedHandler
             provider: app_user_provider
             form_login:
                 login_path: login
