--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -33,5 +33,6 @@ security:
     access_control:
         - { path: ^/users/create, roles: PUBLIC_ACCESS }
         - { path: ^/login, roles: PUBLIC_ACCESS }
+        - { path: ^/tasks, roles: [ROLE_ADMIN,ROLE_USER] }
         - { path: /users, roles: ROLE_ADMIN }
         - { path: ^/, roles: [ROLE_ADMIN,ROLE_USER] }
