unit testing are temporary done #6

--- a/.env
+++ b/.env
@@ -29,3 +29,5 @@ APP_SECRET=61e604a8d896856c080d59b59e6adabe
  DATABASE_URL="mysql://root:@127.0.0.1:3306/todolist?serverVersion=10.4.10-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+KERNEL_CLASS='App\Kernel'
