--- a/composer.json
+++ b/composer.json
@@ -37,13 +37,16 @@
     "symfony/symfony" : "*"
 },
     "require-dev": {
-        "symfony/phpunit-bridge": "^3.0",
         "rector/rector": "^0.18.11",
         "symfony/dotenv": "6.4.*",
         "symfony/stopwatch": "6.4.*",
         "symfony/web-profiler-bundle": "6.4.*",
         "symfony/maker-bundle": "^1.52",
-        "phpro/grumphp": "^2.3"
+        "phpro/grumphp": "^2.3",
+        "symfony/browser-kit": "6.4.*",
+        "symfony/css-selector": "6.4.*",
+        "phpunit/phpunit": "^9.5",
+        "symfony/phpunit-bridge": "^7.0"
     },
     "scripts": {
         "analyse" : "vendor/bin/phpstan analyse src",
