--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "symfony/cache": "6.4.*",
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
-        "doctrine/orm": "^2.17"
+        "doctrine/orm": "^2.17",
+        "fakerphp/faker": "^1.23"
     },
     "conflict" : {
     "symfony/symfony" : "*"
@@ -46,11 +47,11 @@
         "symfony/browser-kit": "6.4.*",
         "symfony/css-selector": "6.4.*",
         "phpunit/phpunit": "^9.5",
-        "symfony/phpunit-bridge": "^7.0"
+        "symfony/phpunit-bridge": "^7.0",
+        "doctrine/doctrine-fixtures-bundle": "^3.5"
     },
     "scripts": {
         "analyse" : "vendor/bin/phpstan analyse src",
-
         "post-install-cmd": [
             "@symfony-scripts"
         ],
