--- a/composer.json
+++ b/composer.json
@@ -32,14 +32,14 @@
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.17",
-        "fakerphp/faker": "^1.23"
+        "fakerphp/faker": "^1.23",
+        "symfony/dotenv": "^7.0"
     },
     "conflict" : {
     "symfony/symfony" : "*"
 },
     "require-dev": {
         "rector/rector": "^0.18.11",
-        "symfony/dotenv": "6.4.*",
         "symfony/stopwatch": "6.4.*",
         "symfony/web-profiler-bundle": "6.4.*",
         "symfony/maker-bundle": "^1.52",
